fixed spacing of similar movies

--- a/public/stylesheets/movie.css
+++ b/public/stylesheets/movie.css
@@ -53,12 +53,11 @@ input[type="submit"] {
 .similar{
   margin-top: 200px;
   background-color: #363940;
-  margin-left:30px;
-  margin-right:20px;
-  
+  margin-left: 10px;
+  margin-right:10px;
 }
 
 .image{
   float:left;
-  margin-left: 10px;
+  margin-left: 12px;
 }
